--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cra-template": "1.2.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13"
   },
